<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile" />
    <item
        android:id="@+id/menu_timetable"
        android:title="@string/menu_timetable"
        android:icon="@drawable/ic_timetable" />
    <item
        android:id="@+id/menu_calculator"
        android:title="@string/menu_calculator"
        android:icon="@drawable/ic_calculator" />
    <item
        android:id="@+id/menu_email"
        android:title="@string/menu_email"
        android:icon="@drawable/ic_email" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_logout" />
</menu>
