<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background_image">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="391dp"
        android:layout_height="60dp"
        android:hint="@string/username_hint"
        android:padding="16dp"
        android:inputType="text"
        android:importantForAutofill="yes"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="391dp"
        android:layout_height="60dp"
        android:layout_below="@+id/etUsername"
        android:padding="16dp"
        android:hint="@string/password_hint"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:importantForAutofill="yes"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="32dp" />
    <Button
        android:id="@+id/btnSignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:layout_below="@id/btnSignUpPage"
        android:layout_centerHorizontal="true"
 />


</RelativeLayout>
